; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_uimain.c_ui_main.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/mstsc/extr_uimain.c_ui_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_LOGON_NORMAL = common dso_local global i32 0, align 4
@g_password = common dso_local global i64* null, align 8
@RDP_INFO_AUTOLOGON = common dso_local global i32 0, align 4
@g_servername = common dso_local global i32 0, align 4
@g_domain = common dso_local global i32 0, align 4
@g_shell = common dso_local global i32 0, align 4
@g_directory = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@g_width = common dso_local global i32 0, align 4
@g_height = common dso_local global i32 0, align 4
@g_server_depth = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ui_main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @RDP_LOGON_NORMAL, align 4
  store i32 %3, i32* %2, align 4
  %4 = load i64*, i64** @g_password, align 8
  %5 = getelementptr inbounds i64, i64* %4, i64 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %0
  %9 = load i32, i32* @RDP_INFO_AUTOLOGON, align 4
  %10 = load i32, i32* %2, align 4
  %11 = or i32 %10, %9
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %8, %0
  %13 = load i32, i32* @g_servername, align 4
  %14 = load i32, i32* %2, align 4
  %15 = load i32, i32* @g_domain, align 4
  %16 = load i64*, i64** @g_password, align 8
  %17 = load i32, i32* @g_shell, align 4
  %18 = load i32, i32* @g_directory, align 4
  %19 = load i32, i32* @FALSE, align 4
  %20 = call i32 @rdp_connect(i32 %13, i32 %14, i32 %15, i64* %16, i32 %17, i32 %18, i32 %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %12
  store i32 0, i32* %1, align 4
  br label %33

23:                                               ; preds = %12
  %24 = load i32, i32* @g_width, align 4
  %25 = load i32, i32* @g_height, align 4
  %26 = load i32, i32* @g_server_depth, align 4
  %27 = call i32 @bs_init(i32 %24, i32 %25, i32 %26)
  %28 = call i32 (...) @mi_create_window()
  %29 = icmp ne i32 %28, 0
  br i1 %29, label %31, label %30

30:                                               ; preds = %23
  store i32 0, i32* %1, align 4
  br label %33

31:                                               ; preds = %23
  %32 = call i32 (...) @mi_main_loop()
  store i32 %32, i32* %1, align 4
  br label %33

33:                                               ; preds = %31, %30, %22
  %34 = load i32, i32* %1, align 4
  ret i32 %34
}

declare dso_local i32 @rdp_connect(i32, i32, i32, i64*, i32, i32, i32) #1

declare dso_local i32 @bs_init(i32, i32, i32) #1

declare dso_local i32 @mi_create_window(...) #1

declare dso_local i32 @mi_main_loop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
